[workspace]
members = ["oofs", "oofs_derive"]

[workspace.package]
edition = "2021"
authors = ["PoOnesNerfect <jack.y.l.dev@gmail.com>"]
description = "Auto-generate error context for your functions/methods with an attribute #[oofs]"
documentation = "https://docs.rs/oofs/"
repository = "https://github.com/PoOnesNerfect/oofs"
homepage = "https://github.com/PoOnesNerfect/oofs"
license = "MIT"
readme = "README.md"
