[package]
name = "oofs"
version = "0.1.7"
edition = "2021"
authors = ["PoOnesNerfect <jack.y.l.dev@gmail.com>"]
description = "Error Handler for the Bubble Up Stage"
documentation = "https://docs.rs/oofs/"
repository = "https://github.com/PoOnesNerfect/oofs"
homepage = "https://github.com/PoOnesNerfect/oofs"
license = "MIT"
readme = "../README.md"
categories = ["rust-patterns"]
keywords = ["error", "error-handling", "bubble-up"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["location"]
location = []
debug_strategy_disabled = []
debug_strategy_full = []

[dependencies]
oofs_derive = { version = "=0.1.7", path = "../oofs_derive" }
