[package]
name = "oofs"
version = "0.2.2"
edition = "2021"
authors = ["PoOnesNerfect <jack.y.l.dev@gmail.com>"]
description = "Error handling library that generates and injects context for you."
documentation = "https://docs.rs/oofs/"
repository = "https://github.com/PoOnesNerfect/oofs"
homepage = "https://github.com/PoOnesNerfect/oofs"
license = "MIT"
readme = "../README.md"
categories = ["rust-patterns"]
keywords = ["error", "error-handling", "bubble-up"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["location"]
location = []
debug_non_copyable_disabled = []
debug_non_copyable_full = []

[dependencies]
oofs_derive = { version = "=0.2.2", path = "../oofs_derive" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
